--- a/03-1-1product page.html
+++ b/03-1-1product page.html
@@ -66,7 +66,7 @@
         <!-- -----  section2  star  ------- -->
         <div class="section2">
             <div class="woodboard">
-                <a href="/03shop.html">
+                <a href="./03shop.html">
                     <div class="wood">
                         <p>全<br/>部<br/>商<br/>品</p> 
                     </div>
@@ -103,7 +103,7 @@
                 <div class="line01"></div>
 
                 <h2>選擇商品規格</h2>
-                <select name="seclect" id="">
+                <select name="select" id="">
                     <option value="">--- 請選規格 ---</option>
                     <option value="">大包 250g</option>
                     <option value="">小包 110g</option>
@@ -192,7 +192,7 @@
         <div class="footer">
             <div class="box-left">
                 <a href="01index.html">
-                    <img src="/img/00index/logo02@2x.png" alt="">
+                    <img src="./img/00index/logo02@2x.png" alt="">
                 </a>   
             </div>
             <div class="box-center">
@@ -207,23 +207,23 @@
             <div class="box-right">
                <div class="box-right-block">
                    <a href="#">
-                       <img src="/img/00index/facebook-square-brands.svg" alt="">
+                       <img src="./img/00index/facebook-square-brands.svg" alt="">
                    </a>
                    <a href="#">
-                       <img src="/img/00index/instagram-square-brands.svg" alt="">
+                       <img src="./img/00index/instagram-square-brands.svg" alt="">
                    </a>
                    <a href="#">
-                       <img src="/img/00index/line-brands.svg" alt="">
+                       <img src="./img/00index/line-brands.svg" alt="">
                    </a>
                    <br/>
                    <a href="#">
-                       <img src="/img/00index/cc-visa-brands.svg" alt="">
+                       <img src="./img/00index/cc-visa-brands.svg" alt="">
                    </a>
                    <a href="#"> 
-                       <img src="/img/00index/cc-mastercard-brands.svg" alt="">
+                       <img src="./img/00index/cc-mastercard-brands.svg" alt="">
                    </a>
                    <a href="#"> 
-                       <img src="/img/00index/envelope-solid.svg" alt="" class="line">
+                       <img src="./img/00index/envelope-solid.svg" alt="" class="line">
                    </a>
                   
                </div>
