--- a/03-1-1product page.html
+++ b/03-1-1product page.html
@@ -66,7 +66,7 @@
         <!-- -----  section2  star  ------- -->
         <div class="section2">
             <div class="woodboard">
-                <a href="./03shop.html">
+                <a href="03shop.html">
                     <div class="wood">
                         <p>全<br/>部<br/>商<br/>品</p> 
                     </div>
