--- a/03-1-1product page.html
+++ b/03-1-1product page.html
@@ -13,42 +13,42 @@
         <div class="section1">
              <!-- ---nav bar  star--- -->
              <div class="nav">
-                <a href="01index.html">
+                <a href="./01index.html">
                      <img class="logo1" src="./img/00index/logo01@2x.png" alt="">
                 </a>
                 <ul>
                     <li class="btn btn1">
-                        <a href="02story.html">
+                        <a href="./02story.html">
                             <i></i>
                             <span>品牌故事</span>
                         </a>
                     </li>
                     <li class="btn btn2 active">
-                        <a href="03shop.html">
+                        <a href="./03shop.html">
                             <i></i>
                             <span>養生提案</span>
                         </a>
                     </li>
                     <li class="btn btn3 ">
-                        <a href="04storeroom.html">
+                        <a href="./04storeroom.html">
                             <i></i>
                             <span>我藥你愛</span>
                         </a>
                     </li>
                     <li class="btn btn1 ">
-                        <a href="05outpatient.html">
+                        <a href="./05outpatient.html">
                             <i></i>
                             <span>門診介紹</span>
                         </a>
                     </li>
                     <li class="btn btn2">
-                        <a href="story.html">
+                        <a href="./02story.html">
                             <i></i>
                             <span>預約門診</span>
                         </a>
                     </li>
                     <li class="btn btn3">
-                        <a href="story.html">
+                        <a href="./02story.html">
                             <i></i>
                             <span>登入註冊</span>
                         </a>
@@ -66,12 +66,12 @@
         <!-- -----  section2  star  ------- -->
         <div class="section2">
             <div class="woodboard">
-                <a href="03shop.html">
+                <a href="./03shop.html">
                     <div class="wood">
                         <p>全<br/>部<br/>商<br/>品</p> 
                     </div>
                 </a>
-                <a href="#">
+                <a href="./03-1product page.html">
                     <div class="wood">
                         <p>中<br/>藥<br/>小<br/>點</p> 
                     </div>
@@ -232,3 +232,5 @@
         <!-- --footer block  end-- -->
        
     </div>
+</body>
+</html>    
