--- a/03-1product page.html
+++ b/03-1product page.html
@@ -18,37 +18,37 @@
                 </a>
                 <ul>
                     <li class="btn btn1">
-                        <a href="02story.html">
+                        <a href="./02story.html">
                             <i></i>
                             <span>品牌故事</span>
                         </a>
                     </li>
                     <li class="btn btn2 active">
-                        <a href="03shop.html">
+                        <a href="./03shop.html">
                             <i></i>
                             <span>養生提案</span>
                         </a>
                     </li>
                     <li class="btn btn3 ">
-                        <a href="04storeroom.html">
+                        <a href="./04storeroom.html">
                             <i></i>
                             <span>我藥你愛</span>
                         </a>
                     </li>
                     <li class="btn btn1 ">
-                        <a href="05outpatient.html">
+                        <a href="./05outpatient.html">
                             <i></i>
                             <span>門診介紹</span>
                         </a>
                     </li>
                     <li class="btn btn2">
-                        <a href="story.html">
+                        <a href="./story.html">
                             <i></i>
                             <span>預約門診</span>
                         </a>
                     </li>
                     <li class="btn btn3">
-                        <a href="story.html">
+                        <a href="./story.html">
                             <i></i>
                             <span>登入註冊</span>
                         </a>
@@ -103,7 +103,7 @@
                 <div class="line01"></div>
 
                 <h2>選擇商品規格</h2>
-                <select name="seclect" id="">
+                <select name="select" id="">
                     <option value="">--- 請選規格 ---</option>
                     <option value="">大包 250g</option>
                     <option value="">小包 110g</option>
@@ -197,8 +197,8 @@
          <!-- --footer block  star-- -->
         <div class="footer">
             <div class="box-left">
-                <a href="01index.html">
-                    <img src="/img/00index/logo02@2x.png" alt="">
+                <a href="./01index.html">
+                    <img src="./img/00index/logo02@2x.png" alt="">
                 </a>   
             </div>
             <div class="box-center">
@@ -213,23 +213,23 @@
             <div class="box-right">
                <div class="box-right-block">
                    <a href="#">
-                       <img src="/img/00index/facebook-square-brands.svg" alt="">
+                       <img src="./img/00index/facebook-square-brands.svg" alt="">
                    </a>
                    <a href="#">
-                       <img src="/img/00index/instagram-square-brands.svg" alt="">
+                       <img src="./img/00index/instagram-square-brands.svg" alt="">
                    </a>
                    <a href="#">
-                       <img src="/img/00index/line-brands.svg" alt="">
+                       <img src="./img/00index/line-brands.svg" alt="">
                    </a>
                    <br/>
                    <a href="#">
-                       <img src="/img/00index/cc-visa-brands.svg" alt="">
+                       <img src="./img/00index/cc-visa-brands.svg" alt="">
                    </a>
                    <a href="#"> 
-                       <img src="/img/00index/cc-mastercard-brands.svg" alt="">
+                       <img src="./img/00index/cc-mastercard-brands.svg" alt="">
                    </a>
                    <a href="#"> 
-                       <img src="/img/00index/envelope-solid.svg" alt="" class="line">
+                       <img src="./img/00index/envelope-solid.svg" alt="" class="line">
                    </a>
                   
                </div>
