--- a/01index.html
+++ b/01index.html
@@ -70,7 +70,7 @@
              <!-- ---nav bar  end--- -->
 
             <img class="main-pic" src="./img/00index/pic01.jpg" alt="">
-            <div class="bottom">
+            <!-- <div class="bottom">
                 <div class="bottom-left">
                     <p>電話：02 2833 7421 &nbsp;&nbsp;&nbsp;地址：111台北市士林區中山北路六段208號</p>
                     <p>營業時間：週一至週五09:00 – 21:30 &nbsp;&nbsp;週六：09:00 – 17:30 &nbsp;&nbsp;週日：休息</p>
@@ -79,12 +79,9 @@
                     <li><a href="https://www.facebook.com/TAICHANGTANG/"><img src="./img/00index/facebook-square-brands.svg" alt=""></a></li>
                     <li><a href="https://www.instagram.com/taichangtang/"><img src="./img/00index/instagram-square-brands.svg" alt=""></a></li>
                     <li><a href="https://mail.google.com/"><img src="./img/00index/envelope-solid.svg" alt=""></a></li>
-                    <!-- <li><a href="https://www.facebook.com/TAICHANGTANG/"><i class="fab fa-instagram-square"></i></a></li>
-                    <li><a href="https://www.instagram.com/taichangtang/"> <i class="fab fa-instagram-square"></i></a></li>
-                    <li><a href="https://mail.google.com/"><i class="fas fa-envelope"></i></a></li> -->
                  </ul>
                  <div class="clear"></div>
-            </div>
+            </div> -->
         </div>  
 
         <!-- section 3 -->
@@ -128,14 +125,14 @@
 
         <!-- section 4 -->
         <div class="section4"> 
-            <img src="./img/00index/pic02.png" alt="">
-            <div class="cover"></div>
-            <span>
+            <!-- <img src="./img/00index/pic02.png" alt=""> -->
+            <!-- <div class="cover"></div> -->
+            <div class="text">
                 <h1>「道地藥材，童叟無欺」</h1>
                 <h2>泰昌堂的意象，是交和且踏實，在這段的40年裡歲月裡，<br>
                     藥房承載著中藥香與人情味，並且陪伴著許許多多的民眾長大。
                     </h2>
-            </span>
+            </div>
         </div>
 
         <!-- section 5 -->
@@ -150,13 +147,15 @@
             <img src="./img/00index/pic03.png" alt="">
           </div>
           <div class="mid">
-            <span>02</span>
-            <h2>服務 / Service<br/><br/>
-                三位中國醫藥大學畢業的中醫師，具備現代與傳統醫學學識，並與時俱進的持續進修。從診察辨證、
-                處方用藥到調配煎製，每一個環節親自把關。<br/><br/>「辯證求因，審因論治」四診合參，望聞問切，
-                評估身體氣血陰陽的平衡，找回身體自癒的能力。
+            <div class="mid-right">
+                <span>02</span>
+                <h2>服務 / Service<br/><br/>
+                    三位中國醫藥大學畢業的中醫師，具備現代與傳統醫學學識，並與時俱進的持續進修。從診察辨證、
+                    處方用藥到調配煎製，每一個環節親自把關。<br/><br/>「辯證求因，審因論治」四診合參，望聞問切，
+                    評估身體氣血陰陽的平衡，找回身體自癒的能力。
 
-            </h2>
+                </h2>
+            </div>
             <img src="./img/00index/pic04.png" alt="">
           </div>
           <div class="btm">
