改滿版 增加min-width

--- a/01index.html
+++ b/01index.html
@@ -22,9 +22,9 @@
             <!-- ---nav bar  star--- -->
             <div class="nav">
                 <a href="01index.html">
-                    <img class="logo1" src="./img/00index/logo01@2x.png" alt="">
+                     <img class="logo1" src="./img/00index/logo01@2x.png" alt="">
                 </a>
-                <ul>
+                <ul class="menu">
                     <li class="btn btn1">
                         <a href="02story.html">
                             <i></i>
@@ -37,11 +37,19 @@
                             <span>養生提案</span>
                         </a>
                     </li>
-                    <li class="btn btn3">
+                    <li class="btn btn3 select">
                         <a href="04storeroom.html">
                             <i></i>
                             <span>我藥你愛</span>
                         </a>
+                        <ul class="shop-list">
+                            <li class="list-inside">
+                                <a href="./04storeroom.html">藥罐小藏室</a>
+                            </li>
+                            <li class="list-inside"> 
+                                <a href="">藥罐小藏室</a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="btn btn1 ">
                         <a href="05outpatient.html">
