--- a/04storeroom.html
+++ b/04storeroom.html
@@ -14,61 +14,69 @@
 <body>
     <div class="wrapper">
         <div class="section1">
-             <!-- ---nav bar  star--- -->
-             <div class="nav">
-                <a href="01index.html">
-                     <img class="logo1" src="./img/00index/logo01@2x.png" alt="">
-                </a>
-                <ul>
-                    <li class="btn btn1">
-                        <a href="02story.html">
-                            <i></i>
-                            <span>品牌故事</span>
-                        </a>
-                    </li>
-                    <li class="btn btn2 ">
-                        <a href="03shop.html">
-                            <i></i>
-                            <span>養生提案</span>
-                        </a>
-                    </li>
-                    <li class="btn btn3 active">
-                        <a href="04storeroom.html">
-                            <i></i>
-                            <span>我藥你愛</span>
-                        </a>
-                    </li>
-                    <li class="btn btn1 ">
-                        <a href="05outpatient.html">
-                            <i></i>
-                            <span>門診介紹</span>
-                        </a>
-                    </li>
-                    <li class="btn btn2">
-                        <a href="story.html">
-                            <i></i>
-                            <span>預約門診</span>
-                        </a>
-                    </li>
-                    <li class="btn btn3">
-                        <a href="story.html">
-                            <i></i>
-                            <span>登入註冊</span>
-                        </a>
-                    </li>
-                    <a href="#">
-                        <img class="btn7" src="./img/00index/icon04@2x.png" alt="">
+           <!-- ---nav bar  star--- -->
+           <div class="nav">
+            <a href="01index.html">
+                 <img class="logo1" src="./img/00index/logo01@2x.png" alt="">
+            </a>
+            <ul class="menu">
+                <li class="btn btn1">
+                    <a href="02story.html">
+                        <i></i>
+                        <span>品牌故事</span>
                     </a>
-                   
-                </ul>
-            </div>
+                </li>
+                <li class="btn btn2 ">
+                    <a href="03shop.html">
+                        <i></i>
+                        <span>養生提案</span>
+                    </a>
+                </li>
+                <li class="btn btn3 active select">
+                    <a href="04storeroom.html">
+                        <i></i>
+                        <span>我藥你愛</span>
+                    </a>
+                    <ul class="shop-list">
+                        <li class="list-inside">
+                            <a href="./04storeroom.html">藥罐小藏室</a>
+                        </li>
+                        <li class="list-inside"> 
+                            <a href="">藥罐小藏室</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="btn btn1 ">
+                    <a href="05outpatient.html">
+                        <i></i>
+                        <span>門診介紹</span>
+                    </a>
+                </li>
+                <li class="btn btn2">
+                    <a href="story.html">
+                        <i></i>
+                        <span>預約門診</span>
+                    </a>
+                </li>
+                <li class="btn btn3">
+                    <a href="story.html">
+                        <i></i>
+                        <span>登入註冊</span>
+                    </a>
+                </li>
+                <a href="#">
+                    <img class="btn7" src="./img/00index/icon04@2x.png" alt="">
+                </a>
+               
+            </ul>
+        </div>
             <!-- ---nav bar  end--- -->
         </div>
 
 
          <!-- ---section 2 star--- -->
          <div class="section2">
-             <div class="s-left">
+             <!-- <div class="s-left">
                 <a href="./03shop.html">
                     <div class="wood">
                         <p>藥<br/>罐<br/>小<br/>藏<br/>室</p>  
@@ -79,7 +87,7 @@
                         <p>藥<br/>罐<br/>小<br/>遊<br/>戲</p> 
                     </div>
                 </a>
-            </div>
+            </div> -->
             <div class="s-right">
                  <div class="box">
 
