--- a/05outpatient.html
+++ b/05outpatient.html
@@ -17,24 +17,32 @@
                 <a href="01index.html">
                      <img class="logo1" src="./img/00index/logo01@2x.png" alt="">
                 </a>
-                <ul>
+                <ul class="menu">
                     <li class="btn btn1">
                         <a href="02story.html">
                             <i></i>
                             <span>品牌故事</span>
                         </a>
                     </li>
-                    <li class="btn btn2">
+                    <li class="btn btn2 ">
                         <a href="03shop.html">
                             <i></i>
                             <span>養生提案</span>
                         </a>
                     </li>
-                    <li class="btn btn3">
+                    <li class="btn btn3 select">
                         <a href="04storeroom.html">
                             <i></i>
                             <span>我藥你愛</span>
                         </a>
+                        <ul class="shop-list">
+                            <li class="list-inside">
+                                <a href="./04storeroom.html">藥罐小藏室</a>
+                            </li>
+                            <li class="list-inside"> 
+                                <a href="">藥罐小藏室</a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="btn btn1 active">
                         <a href="05outpatient.html">
@@ -63,7 +71,7 @@
             <!-- ---nav bar  end--- -->
             <div class="container">
                 
-                <div>
+                <div class="img-block">
                     <img src="./img/04outpatient/pic01.jpg" alt="" />
                    
                 </div>
@@ -73,14 +81,11 @@
 
         <!-- section 2 -->
         <div class="section2"> 
-            <img src="./img/01story/pic02.png" alt="">
-            <div class="cover"></div>
-            <span>
+            <!-- <img src="./img/01story/pic02.png" alt=""> -->
+            <div class="cover">
                 <h1>「「妙手回春，仁心仁術」</h1>
-                <h2>從中藥行拾階而上，像是穿越時光的隧道，來到現代的中醫診所。
-
-                </h2>
-            </span>
+                <h2>從中藥行拾階而上，像是穿越時光的隧道，來到現代的中醫診所。</h2>
+            </div>
         </div>
          <!-- section 3 -->
          <div class="section3"> 
