--- a/03-1-1product page.html
+++ b/03-1-1product page.html
@@ -13,42 +13,50 @@
         <div class="section1">
              <!-- ---nav bar  star--- -->
              <div class="nav">
-                <a href="./01index.html">
+                <a href="01index.html">
                      <img class="logo1" src="./img/00index/logo01@2x.png" alt="">
                 </a>
-                <ul>
+                <ul class="menu">
                     <li class="btn btn1">
-                        <a href="./02story.html">
+                        <a href="02story.html">
                             <i></i>
                             <span>品牌故事</span>
                         </a>
                     </li>
                     <li class="btn btn2 active">
-                        <a href="./03shop.html">
+                        <a href="03shop.html">
                             <i></i>
                             <span>養生提案</span>
                         </a>
                     </li>
-                    <li class="btn btn3 ">
-                        <a href="./04storeroom.html">
+                    <li class="btn btn3 select">
+                        <a href="04storeroom.html">
                             <i></i>
                             <span>我藥你愛</span>
                         </a>
+                        <ul class="shop-list">
+                            <li class="list-inside">
+                                <a href="./04storeroom.html">藥罐小藏室</a>
+                            </li>
+                            <li class="list-inside"> 
+                                <a href="">藥罐小藏室</a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="btn btn1 ">
-                        <a href="./05outpatient.html">
+                        <a href="05outpatient.html">
                             <i></i>
                             <span>門診介紹</span>
                         </a>
                     </li>
                     <li class="btn btn2">
-                        <a href="./02story.html">
+                        <a href="story.html">
                             <i></i>
                             <span>預約門診</span>
                         </a>
                     </li>
                     <li class="btn btn3">
-                        <a href="./02story.html">
+                        <a href="story.html">
                             <i></i>
                             <span>登入註冊</span>
                         </a>
@@ -58,6 +66,7 @@
                     </a>
                    
                 </ul>
+            </div>
             </div>
             <!-- ---nav bar  end--- -->
         </div>
