--- a/template.html
+++ b/template.html
@@ -18,7 +18,7 @@
                 <a href="01index.html">
                      <img class="logo1" src="./img/00index/logo01@2x.png" alt="">
                 </a>
-                <ul class="out">
+                <ul class="menu">
                     <li class="btn btn1">
                         <a href="02story.html">
                             <i></i>
@@ -37,10 +37,10 @@
                             <span>我藥你愛</span>
                         </a>
                         <ul class="shop-list">
-                            <li>
+                            <li class="list-inside">
                                 <a href="./04storeroom.html">藥罐小藏室</a>
                             </li>
-                            <li>
+                            <li class="list-inside"> 
                                 <a href="">藥罐小藏室</a>
                             </li>
                         </ul>
