--- a/03-1productpage.html
+++ b/03-1productpage.html
@@ -228,7 +228,7 @@
                                     ATM 虛擬代碼繳費<br>  
                                 </p>
                             </li>
-                        </ul>
+                    </ul>
                 </div>
                 
             
@@ -315,6 +315,7 @@
         <!-- --footer block  end-- -->
 
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/3-1produst.js"></script>
 </body>
 </html>
