--- a/01index.html
+++ b/01index.html
@@ -14,11 +14,12 @@
         <!-- section 1 -->
         <div class="section1">
             <img src="./img/00index/bg01-01.png" alt="">
-            <img class="arrow" src="./img/00index/icon06@2x.png" alt="">
-
+            <section id="section03" class="demo">
+                <a href="#section2"><span></span>Scroll</a>
+              </section>
         </div>
          <!-- section 2 -->
-        <div class="section2">
+        <div class="section2" id="section2">
             <!-- ---nav bar  star--- -->
             <div class="nav">
                 <a href="01index.html">
@@ -145,37 +146,48 @@
 
         <!-- section 5 -->
         <div class="section5"> 
+            <!-- top -->
           <div class="top">
-            <span>01</span>
-            <h2>理念 / Concept<br/><br/>
-                古時候的醫者，藥房就是他們行醫的地方，醫師診脈，抓藥煎煮，治癒病人，是再理所當然不過的事情。
-                而這個文化隨著現代的醫藥分業，科學中藥及法規的限制而慢慢地消失。<br/><br/> 
-                我們希望能整合中醫診所與傳統藥行，保留藥房文化，並且利用現代的醫學知識，提供更優良的醫療品質。
-            </h2>
-            <img src="./img/00index/pic03.png" alt="">
+                 <div class="top-left t-margin">
+                    <span>01</span>
+                    <h2>理念 / Concept<br/><br/>
+                        古時候的醫者，藥房就是他們行醫的地方，醫師診脈，抓藥煎煮，治癒病人，是再理所當然不過的事情。
+                        而這個文化隨著現代的醫藥分業，科學中藥及法規的限制而慢慢地消失。<br/><br/> 
+                        我們希望能整合中醫診所與傳統藥行，保留藥房文化，並且利用現代的醫學知識，提供更優良的醫療品質。
+                    </h2>
+                </div>
+                <div class="top-right t-margin">
+                    <img src="./img/00index/pic03.png" alt="">
+                </div>
           </div>
+            <!-- mid -->
           <div class="mid">
-            <div class="mid-right">
-                <span>02</span>
-                <h2>服務 / Service<br/><br/>
-                    三位中國醫藥大學畢業的中醫師，具備現代與傳統醫學學識，並與時俱進的持續進修。從診察辨證、
-                    處方用藥到調配煎製，每一個環節親自把關。<br/><br/>「辯證求因，審因論治」四診合參，望聞問切，
-                    評估身體氣血陰陽的平衡，找回身體自癒的能力。
+                <div class="mid-right t-margin">
+                    <span>02</span>
+                    <h2>服務 / Service<br/><br/>
+                        三位中國醫藥大學畢業的中醫師，具備現代與傳統醫學學識，並與時俱進的持續進修。從診察辨證、
+                        處方用藥到調配煎製，每一個環節親自把關。<br/><br/>「辯證求因，審因論治」四診合參，望聞問切，
+                        評估身體氣血陰陽的平衡，找回身體自癒的能力。
 
-                </h2>
-            </div>
-            <img src="./img/00index/pic04.png" alt="">
+                    </h2>
+                </div>
+                <div class="mid-left t-margin">
+                    <img src="./img/00index/pic04.png" alt="">
+                </div>
           </div>
+            <!-- btm -->
           <div class="btm">
-            <span>03</span>
-            <h2>品質 / Quality<br/><br/>
-                「道地藥材，安全有效」<br>療效與安全性是我們的核心價值。<br/><br/>
-                專業的藥材良劣篩選，再加上農藥與重金屬的多項檢驗，讓患者能夠完全放心的接受治療。
-
-            </h2>
-            <img src="./img/00index/pic05.png" alt="">
-          </div>
-        </div>
+                <div class="btm-left t-margin"> 
+                    <span>03</span>
+                    <h2>品質 / Quality<br/><br/>
+                        「道地藥材，安全有效」<br>療效與安全性是我們的核心價值。<br/><br/>
+                        專業的藥材良劣篩選，再加上農藥與重金屬的多項檢驗，讓患者能夠完全放心的接受治療。
+                    </h2>
+                </div>
+                <div class="btm-right t-margin"> 
+                    <img src="./img/00index/pic05.png" alt="">  
+                </div>
+         </div>
 
          <!-- --footer block  star-- -->
          <div class="footer">
@@ -224,6 +236,7 @@
 
 
     </div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
