--- a/01index.html
+++ b/01index.html
@@ -14,9 +14,11 @@
         <!-- section 1 -->
         <div class="section1">
             <img src="./img/00index/bg01-01.png" alt="">
-            <section id="section03" class="demo">
-                <a href="#section2"><span></span>Scroll</a>
-              </section>
+            <div class="scroll_btn">
+                <section id="section03" class="scroll">
+                    <a href="#section2"><span></span>Scroll</a>
+                </section>
+            </div>
         </div>
          <!-- section 2 -->
         <div class="section2" id="section2">
