--- a/01index.html
+++ b/01index.html
@@ -24,8 +24,12 @@
         <div class="section2" id="section2">
             <!-- ---nav bar  star--- -->
             <div class="nav">
+                <input type="checkbox" id="menu-control">
                 <a href="01index.html">
                      <img class="logo1" src="./img/00index/logo01@2x.png" alt="">
+                </a>
+                <a href="#">
+                    <img class="btn7" src="./img/00index/icon04@2x.png" alt="">
                 </a>
                 <ul class="menu">
                     <li class="btn btn1">
@@ -45,14 +49,61 @@
                             <i></i>
                             <span>我藥你愛</span>
                         </a>
-                        <ul class="shop-list">
+                        <!-- <ul class="shop-list">
                             <li class="list-inside">
                                 <a href="./04storeroom.html">藥罐小藏室</a>
                             </li>
                             <li class="list-inside"> 
                                 <a href="">藥罐小藏室</a>
                             </li>
-                        </ul>
+                        </ul> -->
+                    </li>
+                    <li class="btn btn1 ">
+                        <a href="05outpatient.html">
+                            <i></i>
+                            <span>門診介紹</span>
+                        </a>
+                    </li>
+                    <li class="btn btn2">
+                        <a href="story.html">
+                            <i></i>
+                            <span>預約門診</span>
+                        </a>
+                    </li>
+                    <li class="btn btn3">
+                        <a href="story.html">
+                            <i></i>
+                            <span>登入註冊</span>
+                        </a>
+                    </li>  
+                </ul>
+
+                <ul class="inside-menu">
+                    <li class="btn btn1">
+                        <a href="02story.html">
+                            <i></i>
+                            <span>品牌故事</span>
+                        </a>
+                    </li>
+                    <li class="btn btn2">
+                        <a href="03shop.html">
+                            <i></i>
+                            <span>養生提案</span>
+                        </a>
+                    </li>
+                    <li class="btn btn3 select">
+                        <a href="04storeroom.html">
+                            <i></i>
+                            <span>我藥你愛</span>
+                        </a>
+                        <!-- <ul class="shop-list">
+                            <li class="list-inside">
+                                <a href="./04storeroom.html">藥罐小藏室</a>
+                            </li>
+                            <li class="list-inside"> 
+                                <a href="">藥罐小藏室</a>
+                            </li>
+                        </ul> -->
                     </li>
                     <li class="btn btn1 ">
                         <a href="05outpatient.html">
@@ -72,11 +123,9 @@
                             <span>登入註冊</span>
                         </a>
                     </li>
-                    <a href="#">
-                        <img class="btn7" src="./img/00index/icon04@2x.png" alt="">
-                    </a>
-                   
                 </ul>
+                <label class="hamburger" for="menu-control"><span>選單</span></label>
+               
             </div>
              <!-- ---nav bar  end--- -->
 
