--- a/01index.html
+++ b/01index.html
@@ -161,7 +161,8 @@
             <h2>看看大家都買什麼</h2>
             <ul class="product-list">
                 <a href="./03-1product page.html">
-                    <li><img src="./img/00index/product01@2x.png" alt="">
+                    <li>
+                        <img src="./img/00index/product01@2x.png" alt="">
                          <p>艸果水 東洋盒裝</p>
                          <span>NT$500</span>
                      </li>
