--- a/01index.html
+++ b/01index.html
@@ -206,7 +206,7 @@
             <!-- <div class="cover"></div> -->
             <div class="text">
                 <h1>「道地藥材，童叟無欺」</h1>
-                <h2>泰昌堂的意象，是交和且踏實，在這段40年裡歲月裡，<br>
+                <h2>泰昌堂的意象，是交和且踏實，在這40年的歲月裡，<br>
                     藥房承載著中藥香與人情味，並且陪伴著許許多多的民眾長大。
                     </h2>
             </div>
