--- a/01index.html
+++ b/01index.html
@@ -7,11 +7,12 @@
     <title>泰昌堂網站</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./style/web-commed.css">
-
+    <!-- slick  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css" />
-    
+    <!-- swipe  -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
     <link rel="stylesheet" href="./style/style.css">
    
 </head>
@@ -83,7 +84,7 @@
                         </a>
                     </li>  
                 </ul>
-
+                <!-- ======  hamburger menu ======= -->
                 <ul class="inside-menu">
                     <li class="btn btn1">
                         <a href="02story.html">
@@ -304,12 +305,12 @@
 
 
     </div>
-				
+	 <!-- jquery -->			
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
+     <!-- Slick JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"></script>
     <script src="./js/index.js"></script>
 </body>
