--- a/04storeroom.html
+++ b/04storeroom.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="stylesheet" href="./style/web-commed.css">
     <!-- <link rel="stylesheet" href="./style/storeroom.css"> -->
-    <link rel="stylesheet" href="./style/storeroom copy.css">
+    <link rel="stylesheet" href="./style/storeroom_copy.css">
 </head>
 <body>
     <div class="wrapper">
