--- a/03-1productpage.html
+++ b/03-1productpage.html
@@ -129,11 +129,19 @@
                 </a>
             </div>
             <div class="s-center">
-                <img src="./img/02-1product page/pro01@2x.png" alt="">
+                <div class="carousel__item--active ">
+                    <img src="./img/02-1product page/pro01@2x.png" alt="pic1">
+                </div>
                 <div class="center-bottom">
-                    <img src="./img/02-1product page/pro02@2x.png" alt="">
-                    <img src="./img/02-1product page/pro03@2x.png" alt="">
-                    <img src="./img/02-1product page/pro06@2x.png" alt="">
+                    <a class="carousel__inner__link" href="./img/02-1product page/pro02@2x.png">
+                        <img src="./img/02-1product page/pro02@2x.png" alt="pic1">
+                    </a>
+                    <a class="carousel__inner__link" href="./img/02-1product page/pro03@2x.png"> 
+                    <img src="./img/02-1product page/pro03@2x.png" alt="pic1">
+                    </a>
+                    <a class="carousel__inner__link" href="./img/02-1product page/pro06@2x.png">
+                    <img src="./img/02-1product page/pro06@2x.png" alt="pic1">
+                    </a>
                 </div>
             </div>
             <div class="s-right">
