--- a/02story.html
+++ b/02story.html
@@ -29,14 +29,14 @@
                     <img class="btn7" src="./img/00index/icon04@2x.png" alt="">
                 </a>
                 <!-- ====== ==== hamburger ==== ====== -->
-                <button class="hamburger hamburger--collapse is-active" type="button">
+                <button class="hamburger hamburger--collapse " type="button">
                     <span class="hamburger-box">
                       <span class="hamburger-inner"></span>
                     </span>
                 </button>
                 
                 <ul class="menu">
-                    <li class="btn btn1">
+                    <li class="btn btn1 active">
                         <a href="02story.html">
                             <i></i>
                             <span>品牌故事</span>
