--- a/03-1productpage.html
+++ b/03-1productpage.html
@@ -25,7 +25,7 @@
                     <img class="btn7" src="./img/00index/icon04@2x.png" alt="">
                 </a>
                 <!-- ====== ==== hamburger ==== ====== -->
-                <button class="hamburger hamburger--collapse is-active" type="button">
+                <button class="hamburger hamburger--collapse " type="button">
                     <span class="hamburger-box">
                       <span class="hamburger-inner"></span>
                     </span>
@@ -38,13 +38,13 @@
                             <span>品牌故事</span>
                         </a>
                     </li>
-                    <li class="btn btn2">
+                    <li class="btn btn2 active">
                         <a href="03shop.html">
                             <i></i>
                             <span>養生提案</span>
                         </a>
                     </li>
-                    <li class="btn btn3 select">
+                    <li class="btn btn3 select ">
                         <a href="04storeroom.html">
                             <i></i>
                             <span>我藥你愛</span>
@@ -117,12 +117,12 @@
         <!-- -----  section2  star  ------- -->
         <div class="section2">
             <div class="woodboard">
-                <a href="/03shop.html">
+                <a href="./03shop.html">
                     <div class="wood">
                         <p>全<br/>部<br/>商<br/>品</p> 
                     </div>
                 </a>
-                <a href="#">
+                <a href="./03shop.html">
                     <div class="wood">
                         <p>中<br/>藥<br/>小<br/>點</p> 
                     </div>
