--- a/03shop.html
+++ b/03shop.html
@@ -27,7 +27,7 @@
                     <img class="btn7" src="./img/00index/icon04@2x.png" alt="">
                 </a>
                 <!-- ====== ==== hamburger ==== ====== -->
-                <button class="hamburger hamburger--collapse is-active" type="button">
+                <button class="hamburger hamburger--collapse " type="button">
                     <span class="hamburger-box">
                       <span class="hamburger-inner"></span>
                     </span>
@@ -40,7 +40,7 @@
                             <span>品牌故事</span>
                         </a>
                     </li>
-                    <li class="btn btn2">
+                    <li class="btn btn2 active">
                         <a href="03shop.html">
                             <i></i>
                             <span>養生提案</span>
@@ -164,21 +164,23 @@
                 </a>
             </div>
             <div class="productboard">
-                <div class="top">
-                 
-                    <img class="icon" src="./img/02shop/Icon05@2x.png" alt="">
-                    <input class="search icon" type="text" placeholder="search..." />
-                    <select class="select">
-                        <option>請選擇養生方案 </option>
-                        <option>春天換季不敏感</option>
-                        <option>夏天減重大作戰</option>
-                        <option>秋季滋補</option>
-                        <option>冬季暖氣補血</option>
-                        <option>上班族補元氣</option>
-                        <option>媽媽好孕力</option>
-                        <option>兒童轉骨配方</option>
-                    </select>
-                </div>   
+                <form action="">
+                    <div class="top">
+                    
+                        <img class="icon" src="./img/02shop/Icon05@2x.png" alt="">
+                        <input class="search icon" type="text" placeholder="search..." />
+                        <select class="select">
+                            <option>請選擇養生方案 </option>
+                            <option>春天換季不敏感</option>
+                            <option>夏天減重大作戰</option>
+                            <option>秋季滋補</option>
+                            <option>冬季暖氣補血</option>
+                            <option>上班族補元氣</option>
+                            <option>媽媽好孕力</option>
+                            <option>兒童轉骨配方</option>
+                        </select>
+                    </div>   
+                </form>
                 <div class="out">
                     <a href="./03-1productpage.html">
                         <div class="product p1">
