--- a/04storeroom.html
+++ b/04storeroom.html
@@ -28,7 +28,7 @@
                     <img class="btn7" src="./img/00index/icon04@2x.png" alt="">
                 </a>
                 <!-- ====== ==== hamburger ==== ====== -->
-                <button class="hamburger hamburger--collapse is-active media_none" type="button">
+                <button class="hamburger hamburger--collapse  media_none" type="button">
                     <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
                     </span>
@@ -47,7 +47,7 @@
                             <span>養生提案</span>
                         </a>
                     </li>
-                    <li class="btn btn3 select">
+                    <li class="btn btn3 select active">
                         <a href="04storeroom.html">
                             <i></i>
                             <span>我藥你愛</span>
