--- a/05outpatient.html
+++ b/05outpatient.html
@@ -29,7 +29,7 @@
                     <img class="btn7" src="./img/00index/icon04@2x.png" alt="">
                 </a>
                 <!-- ====== ==== hamburger ==== ====== -->
-                <button class="hamburger hamburger--collapse is-active" type="button">
+                <button class="hamburger hamburger--collapse " type="button">
                     <span class="hamburger-box">
                       <span class="hamburger-inner"></span>
                     </span>
@@ -54,7 +54,7 @@
                             <span>我藥你愛</span>
                         </a>
                     </li>
-                    <li class="btn btn1 ">
+                    <li class="btn btn1 active">
                         <a href="05outpatient.html">
                             <i></i>
                             <span>門診介紹</span>
