--- a/03-1productpage.html
+++ b/03-1productpage.html
@@ -130,17 +130,17 @@
             </div>
             <div class="s-center">
                 <div class="carousel__item--active ">
-                    <img src="./img/02-1product page/pro01@2x.png" alt="pic1">
+                    <img class="carousel__item__pic--active" src="./img/02-1product page/pro01@2x.png" alt="pic1">
                 </div>
                 <div class="center-bottom">
-                    <a class="carousel__inner__link" href="./img/02-1product page/pro02@2x.png">
-                        <img src="./img/02-1product page/pro02@2x.png" alt="pic1">
+                    <a class="carousel__inner__link " href="./img/02-1product page/pro01@2x.png">
+                        <img  src="./img/02-1product page/pro02@2x.png" alt="pic1">
                     </a>
-                    <a class="carousel__inner__link" href="./img/02-1product page/pro03@2x.png"> 
-                    <img src="./img/02-1product page/pro03@2x.png" alt="pic1">
+                    <a class="carousel__inner__link " href="./img/02-1product page/pic1.jpg"> 
+                    <img class="a" src="./img/02-1product page/pic1.jpg" alt="pic1">
                     </a>
-                    <a class="carousel__inner__link" href="./img/02-1product page/pro06@2x.png">
-                    <img src="./img/02-1product page/pro06@2x.png" alt="pic1">
+                    <a class="carousel__inner__link " href="./img/02-1product page/pic2.jpg">
+                    <img class="a" src="./img/02-1product page/pic2.jpg" alt="pic1">
                     </a>
                 </div>
             </div>
